исправил IMG_0010.JPG

--- a/vanillajs/index.html
+++ b/vanillajs/index.html
@@ -80,7 +80,7 @@
                     </p>
                     <p class="gallery-photo-previews">
                         <button class="gallery-photo-preview" type="button">
-                            <img src="./img/cat_gallery/IMG_0010.jpg" alt="Вася лежит">
+                            <img src="./img/cat_gallery/IMG_0010.JPG" alt="Вася лежит">
                         </button>
                         <button class="gallery-photo-preview" type="button">
                             <img src="./img/cat_gallery/IMG_0029.JPG" alt="Вася идёт">
