--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>---Portfolio---</h1>
     <br>
     <a href="./vanillajs/index.html">
-        <h2>Ванильный JS</h2>
+        <h2>папка№2 - "Ванил"</h2>
     </a>
     <a href="#">
         <h2>папка№2</h2>
