--- a/vanillajs/index.html
+++ b/vanillajs/index.html
@@ -143,7 +143,7 @@
                     Все задачи выполнены. Новых задач нет.
                 </p>
                 <form class="add-task" action="#" method="POST">
-                    <input class="add-task-input" type="text" aria-label="Описание задачи" placeholder="Например: Сделать лекарство против коронрвирусной инфекции COVID-19" required>
+                    <input class="add-task-input" type="text" aria-label="Описание задачи" placeholder="Например: Сделать лекарство против короновирусной инфекции COVID-19" required>
                     <button class="add-task-button" type="submit">
                         Добавить задачу
                     </button>
