changed the map

--- a/vanillajs/index.html
+++ b/vanillajs/index.html
@@ -177,13 +177,22 @@
     <aside id="aside">
         <nav id="nav" class="navigation"></nav>
         <div class="hidden-my-location">
-            <iframe 
+            <!-- <iframe 
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1285.8985633818268!2d65.55730139108134!3d57.17782790278336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x43bbe3f6df4c7369%3A0xc0746027ad98e54e!2z0L_RgC4g0JfQsNGA0LXRh9C90YvQuSwgNiDQutC-0YDQv9GD0YEgMiwg0KLRjtC80LXQvdGMLCDQotGO0LzQtdC90YHQutCw0Y8g0L7QsdC7LiwgNjI1MDIy!5e0!3m2!1sru!2sru!4v1583210404554!5m2!1sru!2sru" 
                 width="800" 
                 height="600" 
                 frameborder="0" 
                 style="border:0;" 
                 allowfullscreen="">
+            </iframe> -->
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d642.952233779928!2d65.55753096084618!3d57.17765821987813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1584416948587!5m2!1sru!2sru" 
+                width="800" 
+                height="600" 
+                frameborder="0" 
+                style="border:0;" 
+                allowfullscreen="" 
+                aria-hidden="false" 
+                tabindex="0">
             </iframe>
         </div>
     </aside>
