добавил прокрутку, сброс таймера

--- a/vanillajs/index.html
+++ b/vanillajs/index.html
@@ -55,7 +55,6 @@
         <div id="banner" class="decoration">
             <span class="left"></span>
             <span class="right"></span>
-            <!-- <img src="./img/Vitnam_p_7.png" alt="моя рожа"> -->
         </div>
         <div id="strap" class="?">
             <div class="strap-shell">
@@ -68,7 +67,7 @@
                 «Делай, что можешь, с тем, что имеешь, там, где ты есть…», - Теодор Рузвельт
             </p>
         </header>
-        <section class="gallery-section">
+        <section id="cat-gallery-anchor" class="gallery-section">
             <div class="title-plus-popup-menu">
                 <h1>Фото Васи</h1>
                 <p class="popup-menu hidden-gallery-popup-menu"></p>
@@ -131,7 +130,7 @@
                 </div>
             </div>
         </section>
-        <section class="task-list">
+        <section id="task-list-anchor" class="task-list">
             <div class="title-plus-popup-menu">
                 <h1>Список дел</h1>
                 <p class="popup-menu hidden-todo-list-popup-menu"></p>
@@ -160,7 +159,7 @@
                 <button class="update-tasks-array">Записать todo-list в localStorage</button>
             </div>
         </section>
-        <section class="quote-pictures">
+        <section id="anchor-quotes-pictures" class="quote-pictures">
             <div class="title-plus-popup-menu">
                 <h1>Цитаты</h1>
                 <p class="popup-menu hidden-sentences-popup-menu"></p>
@@ -176,15 +175,7 @@
     </div>
     <aside id="aside">
         <nav id="nav" class="navigation"></nav>
-        <div class="hidden-my-location">
-            <!-- <iframe 
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1285.8985633818268!2d65.55730139108134!3d57.17782790278336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x43bbe3f6df4c7369%3A0xc0746027ad98e54e!2z0L_RgC4g0JfQsNGA0LXRh9C90YvQuSwgNiDQutC-0YDQv9GD0YEgMiwg0KLRjtC80LXQvdGMLCDQotGO0LzQtdC90YHQutCw0Y8g0L7QsdC7LiwgNjI1MDIy!5e0!3m2!1sru!2sru!4v1583210404554!5m2!1sru!2sru" 
-                width="800" 
-                height="600" 
-                frameborder="0" 
-                style="border:0;" 
-                allowfullscreen="">
-            </iframe> -->
+        <div id="aside-anchor" class="hidden-my-location">
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d642.952233779928!2d65.55753096084618!3d57.17765821987813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1584416948587!5m2!1sru!2sru" 
                 width="800" 
                 height="600" 
