--- a/vanillajs/index.html
+++ b/vanillajs/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./style/fontawesome-free-5.12.1-web/css/brands.css">
     <link rel="stylesheet" href="./style/fontawesome-free-5.12.1-web/css/regular.css">
     <link rel="stylesheet" href="./style/fontawesome-free-5.12.1-web/css/solid.css">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <title>my page</title>
 </head>
 <body>
