--- a/index.html
+++ b/index.html
@@ -10,16 +10,13 @@
     <h1>---Portfolio---</h1>
     <br>
     <a href="./vanillajs/index.html">
-        <h2>папка№1 - "Ванил"</h2>
+        <h2>"ванильный js"</h2>
     </a>
-    <a href="#">
-        <h2>папка№2</h2>
+    <a href="./gulp/app/index.html">
+        <h2>gulp + sass + webpack</h2>
     </a>
-    <a href="#">
-        <h2>папка№3</h2>
-    </a>
-    <a href="#">
-        <h2>и т.д. ...</h2>
+    <a href="https://github.com/sskityum/sskityum.github.io">
+        <h2>code</h2>
     </a>
 </body>
 </html>
