--- a/gulp/src/public/index.html
+++ b/gulp/src/public/index.html
@@ -13,7 +13,7 @@
     <title>my page</title>
 </head>
 <body>
-    <div id="topbar" role="banner">
+    <div id="topbar">
         <div class="topbar-shell">
             <a class="logo" href="index.html">
                 <i class="icon">SSP</i>
