--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>---Portfolio---</h1>
     <br>
     <a href="./vanillajs/index.html">
-        <h2>"ванильный js"</h2>
+        <h2>ванильный js</h2>
     </a>
     <a href="./gulp/app/index.html">
         <h2>gulp + sass + webpack</h2>
