--- a/gulp/app/index.html
+++ b/gulp/app/index.html
@@ -70,7 +70,7 @@
         </header>
         <section id="cat-gallery-anchor" class="gallery-section">
             <div class="title-plus-popup-menu">
-                <h1>Фото Васи</h1>
+                <h1>Котогалерея</h1>
                 <p class="popup-menu hidden-gallery-popup-menu"></p>
             </div>
             <div class="gallery">
