--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <a href="./gulp_jquery/app/index.html">
         <h2>gulp&sass&webpack&jquery</h2>
     </a>
+    <a href="./gulp_typescript/dist/index.html">
+        <h2>gulp&sass&webpack&typescript</h2>
+    </a>
     <a href="https://github.com/sskityum/sskityum.github.io">
         <h2>code</h2>
     </a>
