--- a/index.html
+++ b/index.html
@@ -1,31 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./vanillajs/img/suitcase-rolling.ico" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="./vanillajs/img/suitcase-rolling.ico"
+      type="image/x-icon"
+    />
     <title>portfolio</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>---Portfolio---</h1>
-    <br>
+    <br />
     <a href="./vanillajs/index.html">
-        <h2>ванильный js</h2>
+      <h2>ванильный js</h2>
     </a>
     <a href="./gulp/app/index.html">
-        <h2>gulp&sass&webpack</h2>
+      <h2>gulp&sass&webpack</h2>
     </a>
     <a href="./gulp_jquery/app/index.html">
-        <h2>gulp&sass&webpack&jquery</h2>
+      <h2>gulp&sass&webpack&jquery</h2>
     </a>
     <a href="./gulp_typescript/dist/index.html">
-        <h2>gulp&sass&webpack&typescript</h2>
+      <h2>gulp&sass&webpack&typescript</h2>
     </a>
     <a href="https://my-react-hooks-d61fa.web.app/">
-        <h2>react</h2>
+      <h2>react</h2>
+    </a>
+    <a href="https://frozen-basin-59279.herokuapp.com/">
+      <h2>django + react</h2>
     </a>
     <a href="https://github.com/sskityum/sskityum.github.io">
-        <h2>code</h2>
+      <h2>code</h2>
     </a>
-</body>
+  </body>
 </html>
