--- a/index.html
+++ b/index.html
@@ -4,35 +4,142 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      rel="shortcut icon"
-      href="./vanillajs/img/suitcase-rolling.ico"
-      type="image/x-icon"
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
     <title>portfolio</title>
   </head>
   <body>
-    <h1>---Portfolio---</h1>
+    <!-- <h1>---Portfolio---</h1>
     <br />
     <a href="./vanillajs/index.html">
-      <h2>ванильный js</h2>
+      <h5>ванильный js</h5>
     </a>
     <a href="./gulp/app/index.html">
-      <h2>gulp&sass&webpack</h2>
+      <h5>gulp&sass&webpack</h5>
     </a>
-    <a href="./gulp_jquery/app/index.html">
-      <h2>gulp&sass&webpack&jquery</h2>
+    <a href="./gulp_jQuery/app/index.html">
+      <h5>gulp&sass&webpack&jQuery</h5>
     </a>
     <a href="./gulp_typescript/dist/index.html">
-      <h2>gulp&sass&webpack&typescript</h2>
+      <h5>gulp&sass&webpack&typescript</h5>
     </a>
     <a href="https://my-react-hooks-d61fa.web.app/">
-      <h2>react</h2>
-    </a>
-    <a href="https://frozen-basin-59279.herokuapp.com/">
-      <h2>django + react</h2>
+      <h5>react</h5>
     </a>
     <a href="https://github.com/sskityum/sskityum.github.io">
-      <h2>code</h2>
-    </a>
+      <h5>code</h5>
+    </a> -->
+    <div class="container">
+      <div class="row">
+        <div class="col"></div>
+        <div class="col-8">
+          <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+              <h1 class="display-4">---Portfolio---</h1>
+            </div>
+          </div>
+        </div>
+        <div class="col"></div>
+      </div>
+      <div class="row">
+        <div class="col"></div>
+        <div class="col-8">
+          <div
+            id="carouselExampleCaptions"
+            class="carousel slide"
+            data-ride="carousel"
+          >
+            <ol class="carousel-indicators">
+              <li
+                data-target="#carouselExampleCaptions"
+                data-slide-to="0"
+                class="active"
+              ></li>
+              <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="carousel-caption d-none d-md-block">
+                  <a href="./vanillajs/index.html">
+                    <h5>ванильный js</h5>
+                  </a>
+                  <a href="./gulp/app/index.html">
+                    <h5>gulp&sass&webpack</h5>
+                  </a>
+                  <a href="./gulp_jQuery/app/index.html">
+                    <h5>gulp&sass&webpack&jQuery</h5>
+                  </a>
+                  <a href="./gulp_typescript/dist/index.html">
+                    <h5>gulp&sass&webpack&typescript</h5>
+                  </a>
+                  <a href="https://my-react-hooks-d61fa.web.app/">
+                    <h5>react</h5>
+                  </a>
+                  <a href="https://github.com/sskityum/sskityum.github.io">
+                    <h5>code</h5>
+                  </a>
+                  <h5>frontend</h5>
+                  <p>
+                    Hosted directly from my GitHub repository. Хостинг на GitHub
+                    Pages.
+                  </p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="carousel-caption d-none d-md-block">
+                  <a href="https://frozen-basin-59279.herokuapp.com/">
+                    <h2>django + react</h2>
+                  </a>
+                  <a href="https://github.com/sskityum/django-react">
+                    <h5>code</h5>
+                  </a>
+                  <h5>backend + frontend</h5>
+                  <p>Хостинг на Heroku.</p>
+                </div>
+              </div>
+            </div>
+            <a
+              class="carousel-control-prev"
+              href="#carouselExampleCaptions"
+              role="button"
+              data-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a
+              class="carousel-control-next"
+              href="#carouselExampleCaptions"
+              role="button"
+              data-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+        <div class="col"></div>
+      </div>
+    </div>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
