--- a/index.html
+++ b/index.html
@@ -9,30 +9,15 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
+    <link
+      rel="shortcut icon"
+      href="./vanillajs/img/suitcase-rolling.ico"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>portfolio</title>
   </head>
   <body>
-    <!-- <h1>---Portfolio---</h1>
-    <br />
-    <a href="./vanillajs/index.html">
-      <h5>ванильный js</h5>
-    </a>
-    <a href="./gulp/app/index.html">
-      <h5>gulp&sass&webpack</h5>
-    </a>
-    <a href="./gulp_jQuery/app/index.html">
-      <h5>gulp&sass&webpack&jQuery</h5>
-    </a>
-    <a href="./gulp_typescript/dist/index.html">
-      <h5>gulp&sass&webpack&typescript</h5>
-    </a>
-    <a href="https://my-react-hooks-d61fa.web.app/">
-      <h5>react</h5>
-    </a>
-    <a href="https://github.com/sskityum/sskityum.github.io">
-      <h5>code</h5>
-    </a> -->
     <div class="container">
       <div class="row">
         <div class="col"></div>
