--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               </div>
               <div class="carousel-item">
                 <div class="carousel-caption d-none d-md-block">
-                  <a href="https://frozen-basin-59279.herokuapp.com/">
+                  <a href="https://fast-basin-91658.herokuapp.com">
                     <h2>django + react</h2>
                   </a>
                   <a href="https://github.com/sskityum/django-react">
