--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   <a href="./gulp/app/index.html">
                     <h5>gulp&sass&webpack</h5>
                   </a>
-                  <a href="./gulp_jQuery/app/index.html">
+                  <a href="./gulp_jquery/app/index.html">
                     <h5>gulp&sass&webpack&jQuery</h5>
                   </a>
                   <a href="./gulp_typescript/dist/index.html">
